fix text clipping on firefox select

--- a/src/components/field/field.scss
+++ b/src/components/field/field.scss
@@ -177,7 +177,6 @@
 
     @supports (-moz-appearance: none) {
       transform: translate(0, -3px) !important;
-      text-indent: -2px;
       transform: none;
       -moz-appearance: none;
       padding-right: 26px;
